--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Kutty lover</title>
+    <title>COVID Guide V0.3</title>
     <base href="https://covidwiki-71a23.firebaseapp.com/">
     <script type="text/javascript" src="https://covidwiki-71a23.firebaseapp.com/runtime.a66f828dca56eeb90e02.js"></script>
     <script type="text/javascript" src="https://covidwiki-71a23.firebaseapp.com/main.2eb2046276073df361f7.js"></script><!-- update the version number as needed -->
